--- a/package.xml
+++ b/package.xml
@@ -3,17 +3,16 @@
 <package format="3">
   <name>mocap_feedback</name>
   <version>0.0.0</version>
-  <description>Subscribernode for mocap system</description>
-  <maintainer email="sigrimel@stud.ntnu.no">sigridmellemseter</maintainer>
-  <license>MIT</license>
+  <description>TODO: Package description</description>
+  <maintainer email="ascend@todo.todo">ascend</maintainer>
+  <license>TODO: License declaration</license>
 
-  <buildtool_depend>ament_cmake</buildtool_depend>
-
-  <test_depend>ament_lint_auto</test_depend>
-  <test_depend>ament_lint_common</test_depend>
+  <test_depend>ament_copyright</test_depend>
+  <test_depend>ament_flake8</test_depend>
+  <test_depend>ament_pep257</test_depend>
+  <test_depend>python3-pytest</test_depend>
 
   <export>
-    <build_type>ament_cmake</build_type>
+    <build_type>ament_python</build_type>
   </export>
 </package>
-
